# seedcase-sprout

./: .cz.toml  .dockerignore  .editorconfig  .gitignore  .pre-commit-config.yaml  .typos.toml  CHANGELOG.md  CITATION.cff  Dockerfile  LICENSE.md  README.md  _quarto-pdf.yml  _quarto.yml  _renderer.py  _variables.yml  class_index.html  database.env  docker-compose.yml  fly.toml  function_index.html  index.html  index.qmd  justfile  manage.py  mypy.ini  pyproject.toml  pytest.ini  ruff.toml  status.json  z_06b0235d3a714a6a___init___py.html  z_06b0235d3a714a6a_check_fields_not_blank_py.html  z_06b0235d3a714a6a_check_fields_present_py.html  z_06b0235d3a714a6a_check_list_item_field_not_blank_py.html  z_06b0235d3a714a6a_check_no_inline_data_py.html  z_06b0235d3a714a6a_check_required_package_properties_not_blank_py.html  z_06b0235d3a714a6a_check_resource_path_string_py.html  z_06b0235d3a714a6a_exclude_non_sprout_resource_errors_py.html  z_06b0235d3a714a6a_get_blank_value_for_type_py.html  z_06b0235d3a714a6a_get_json_path_to_resource_field_py.html  z_06b0235d3a714a6a_get_sprout_package_errors_py.html  (+108 more)
.github/: CODEOWNERS  dependabot.yml  pull_request_template.md
.github/workflows/: add-to-project.yml  build-package.yml  build-website.yml  check-data-package-version.yml  delete-environment.yml  deploy-demo.yml  deploy-docs.yml  deploy-pr-preview.yml  docker-build-and-publish.yml  fly-deploy-pr.yml  fly-deploy.yml  lint-python.yml  publish-to-pypi.yml  puml-to-svg.yml  python-style.yml  scorecard.yml  scorecards.yml  test.yml  update-version-and-publish.yml  update-version.yml
accounts/: __init__.py  apps.py  forms.py  models.py  tests.py  urls.py  views.py
accounts/templates/: register.html
app/: __init__.py  admin.py  apps.py  csv_reader.py  forms.py  models-tests.py  models.py  tests.py  urls.py  validators.py  views.py
app/fixtures/: sample.json
app/migrations/: 0001_initial.py  0002_columndatatype_pandas_type_and_more.py  0002_columndatatype_polars_types.py
app/models/: __init__.py  column_data_type.py  column_metadata.py  table_metadata.py
app/templates/: base.html  column-review.html  columndata-review.html  create-new-table.html  data-import-page.html  data-import.html  file-drop-zone.html  file-upload.html  hello.html  home.html  navigation-bar.html  update-column-metadata.html  update-columns-for-table.html
app/tests/: __init__.py  db_test_utils.py  tests_csv_reader.py  tests_forms.py  tests_models.py  tests_validators.py  tests_views.py
app/validators/: field_validators.py  model_dependent_validators.py
app/views/: __init__.py  column_review.py  data_import.py  file_upload.py
config/: __init__.py  asgi.py  settings.py  urls.py  wsgi.py
docs/: LICENSE.md  _publish.yml  _quarto.yml  glossary.qmd  index.qmd  releases.qmd  site-counter.html  user-tests.qmd
docs/design/: app-urls.qmd  c4-models.qmd  data-types.qmd  glossary.yml  index.qmd  naming.qmd  outputs.qmd  python-functions.qmd  requirements.qmd  runtime-view.html  runtime-view.qmd  use-cases.qmd  user-flow.qmd  user-roles.qmd  users.qmd
docs/guide/: _preamble.qmd  checks.qmd  index.qmd  installation.qmd  packages.qmd  resources.qmd
docs/includes/: _badges.qmd  _wip.qmd
docs/user-tests/: user-tests.qmd
filters/: pdf-internal-link.lua
persistent_storage/: persistent_storage.md
persistent_storage/raw/: raw.md
seedcase_sprout/: __init__.py  asgi.py  settings.py  urls.py  wsgi.py
seedcase_sprout/app/: apps.py  forms.py  validators.py
seedcase_sprout/core/: __init__.py  check_data_path.py  check_is_dir.py  check_is_file.py  check_is_package_dir.py  check_is_resource_dir.py  check_is_supported_format.py  create_global_path.py  create_id_path.py  create_next_id.py  create_package_structure.py  create_properties_path.py  create_raw_file_name.py  create_readme_text.py  create_relative_resource_data_path.py  create_resource_properties.py  create_resource_raw_path.py  create_resource_structure.py  create_root_path.py  create_sprout_global_path.py  edit_package_properties.py  edit_property_field.py  example_package_properties.py  extract_properties_from_file.py  get_global_envvar.py  get_ids.py  get_iso_timestamp.py  (+24 more)
sprout/: __init__.py  apps.py  csv_reader.py  csv_validator.py  forms.py  uploaders.py  urls.py  validators.py
tests/: assert_raises_errors.py  conftest.py  db_test_utils.py  directory_structure_setup.py  load_properties.py  test_as_readme_text.py  test_clean_snakecase.py  test_create_properties_script.py  test_create_properties_template.py  test_create_resource_batch_path.py  test_create_resource_properties_script.py  test_csv_validator.py  test_examples.py  test_extract_resource_properties.py  test_get_ids.py  test_get_nested_attr.py  test_join_resource_batches.py  test_models_tables_and_columns.py  test_nested_update.py  test_paths.py  test_properties.py  test_read_properties.py  test_read_resource_batches.py  test_set_missing_values_to_null.py  test_update_package_properties.py  test_views_projects_id_metadata_id_step_confirmation.py  test_views_projects_id_view.py  test_write_file.py  test_write_package_properties.py  test_write_properties.py  test_write_resource_batch.py  test_write_resource_data.py  test_write_resource_properties.py
tools/: __init__.py  generate-dataclasses.sh  generate_dataclasses.py  generated_properties_.py  vulture-allowlist.py
(+686 files in other folders)
