[tool.poetry]
name = "seedcase-sprout"
version = "0.3.0"
description = "Grow your research data in a structured, modern way that follows best practices."
authors = [
  "Luke W. Johnston <lwjohnst@gmail.com>",
  "Henrik Goul <hgo@mjolner.dk>",
  "Kristiane Beicher <kris.beicher@clin.au.dk>",
  "Philip Christiansen <pch@mjolner.dk>",
  "Signe Kirk Brødbæk <signekb@clin.au.dk>",
  "Marton Vago <marton.vago95@gmail.com >",
]
maintainers = [
  "Luke W. Johnston <lwjohnst@gmail.com>",
  "Kristiane Beicher <kris.beicher@clin.au.dk>",
  "Signe Kirk Brødbæk <signekb@clin.au.dk>",
  "Marton Vago <marton.vago95@gmail.com >",
]
readme = "README.md"
homepage = "https://sprout.seedcase-project.org"
repository = "https://github.com/seedcase-project/seedcase-sprout"
license = "MIT"
packages = [{include = "seedcase_sprout"}]

[tool.poetry.urls]
"Bug Tracker" = "https://github.com/seedcase-project/seedcase-sprout/issues"

[tool.poetry.dependencies]
python = "^3.12"
polars = "^1.5.0"
frictionless = {extras = ["sql"], version = "^5.17.0"}
requests = "^2.32.3"
platformdirs = "^4.3.2"
jsonschema = "^4.23.0"

[tool.poetry.group.test.dependencies]
pytest = "^8.3.2"
time-machine = "^2.15.0"

[tool.poetry.group.dev.dependencies]
ruff = "^0.8.0"
datamodel-code-generator = {extras = ["http"], version = "^0.26.0"}
commitizen = "^4.0.0"
pre-commit = "^4.0.1"

[tool.poetry.group.docs.dependencies]
jupyter = "^1.1.1"
quartodoc = "^0.9.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
