[project]
name = "seedcase-sprout"
version = "0.44.12"
description = "Grow your research data in a structured, modern way that follows best practices."
authors = [
  {name = "Luke W. Johnston", email = "lwjohnst@gmail.com" },
  {name = "Kristiane Beicher", email = "kris.beicher@clin.au.dk" },
  {name = "Signe Kirk Brødbæk", email = "signekb@clin.au.dk" },
  {name = "Marton Vago", email = "marton.vago95@gmail.com" },
]
maintainers = [
  {name = "Luke W. Johnston", email = "lwjohnst@gmail.com" },
  {name = "Kristiane Beicher", email = "kris.beicher@clin.au.dk" },
  {name = "Signe Kirk Brødbæk", email = "signekb@clin.au.dk" },
  {name = "Marton Vago", email = "marton.vago95@gmail.com" },
]
readme = "README.md"
license = "MIT"
license-files = ["LICENSE.md"]
keywords = [
  "frictionless",
  "framework",
  "data",
  "data structure",
  "data organization",
  "data management",
  "data infrastructure",
  "data engineering",
  "data verification",
  "data checks",
  "data package",
  "data package checks",
]
requires-python = ">=3.12"
dependencies = [
    "dacite>=1.9.2",
    "deepmerge>=2.0",
    "jinja2>=3.1.6",
    "jsonschema>=4.23.0",
    "polars>=1.26.0",
]

[project.urls]
homepage = "https://sprout.seedcase-project.org"
repository = "https://github.com/seedcase-project/seedcase-sprout"
changelog = "https://github.com/seedcase-project/seedcase-sprout/blob/main/CHANGELOG.md"
issues = "https://github.com/seedcase-project/seedcase-sprout/issues"

[dependency-groups]
dev = [
    "bandit>=1.8.3",
    "commitizen>=4.5.0",
    "datamodel-code-generator>=0.28.5",
    "genbadge>=1.1.2",
    "jupyter>=1.1.1",
    "mypy>=1.16.1",
    "pre-commit>=4.2.0",
    "pytest>=8.3.5",
    "pytest-cov>=6.1.1",
    "pyyaml>=6.0.2",
    "quartodoc>=0.9.1",
    "ruff>=0.11.4",
    "time-machine>=2.16.0",
    "types-jsonschema>=4.24.0.20250528",
    "types-requests>=2.32.4.20250611",
    "types-tabulate>=0.9.0.20241207",
    "typos>=1.31.1",
    "vulture>=2.14",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
